clean up HTML comments

--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="index.css">
-    <style>
-        /* Style for the sections */
-        
-    </style>
+   
 </head>
 <body>
     <div id="outer">
         <div id="calculatorWrap">
-            <!-- InstanceBeginEditable name="Calculator" -->
+
             <form class="calculate">
                 <label for="input_value">Value to Convert:</label>
                 <br>
@@ -33,17 +30,18 @@
             </form><div id="calculatorAnswer">
                 Answer:
                 <br>
-                <div id="answer"><br></div>
+                <div id="answer">75.463</div>
             </div>
-            <!-- InstanceEndEditable -->
 
-            <div data-swiftype-index="false" class="alignRight"><br></div>
+
+
 
 
 
         </div>
         <script src="index.js"></script>
     </div>
+
 
 
 </body>
