all conversions functional

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     </select>
                 </div>
                 <button type="submit" class="btn">Calculate</button><div class="calculatorButton floatLeft" id="actionClear">
-                    <input type="reset" name="reset" value="Clear" class="btn" onclick="return resetCalculator(this.form);">
+                                                                        <div><input type="reset" name="reset" value="Clear" class="btn" onclick="return resetCalculator(this.form);"></div>
                 </div>
             </form><div id="calculatorAnswer">
                 Answer:
                 <br>
-                <div id="answer">75.463</div>
+                <div id="answer"></div>
             </div>
 
 
